# cardano-challenge

./: .gitignore  README.md  docker-compose.yml
challenge1/: CERC20_Tx.raw  CERC20_Tx.signed  README.md  Transfer_Tx.raw  Transfer_Tx.signed  challenge1.cabal  deploy_policy.sh  gen_policy.sh  token_transfer_tx.raw  transfer.sh
challenge1/policy/: policy.script  policy.skey  policy.vkey  policyID
challenge1/scripts/: mint-token.sh  token-mint-tx-body.03  token-mint-tx.03  transfer-token.sh
challenge1/src/Cardano/: Challenge1.hs
challenge1/tx/: CERC20_Tx.raw  Transfer_Tx.raw  Transfer_Tx.signed
challenge1_v2/: README.md
challenge1_v2/app/: plutus-token.hs
challenge1_v2/scripts/: testnet-query-protocol-parameters.sh  transfer-tx-body.01  transfer-tx.01
challenge1_v2/src/Cardano/: Challenge1.hs
challenge2/: README.md  deploy_policy.sh  gen_nft_metadata.sh  gen_policy.sh
challenge2/app/: plutus-token.hs
challenge2/metadata/: TVIV-meta.json
challenge2/policy/: policy.script  policy.skey  policy.vkey  policyID
challenge2/scripts/: lobster-tx-body.01  lobster-tx.01  nft-mint-policy.plutus  policyid.sh  testnet-utxo-at.sh  transfer-token.sh  transfer-tx-body.01  transfer-tx.01
challenge2/src/Cardano/: Challenge2.hs
challenge2/tx/: NFT_Tx.raw  NFT_Tx.signed
challenge2_v2/: README.md  challenge2.cabal
challenge2_v2/scripts/: lobster-mint-nft.sh  testnet-script-address.sh
challenge4/: README.md
challenge5/: README.md  docker-compose.yml  readme.md
challenge5/app/: plutus-lobster.hs
challenge5/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
challenge5/dist-newstyle/src/: Win32-net_-5b9448ed2f179086.cache  (+25 more)
challenge5/scripts/: hash-script-data.sh  lobster-contribute.sh  lobster-deploy.sh  lobster-mint-nft.sh  lobster-params.json  lobster.addr  lobster.plutus  nft-mint-policy.plutus
common/: gen_address.sh  gen_protolcol.sh  payment1.addr  payment1.skey  payment1.vkey  payment2.addr  payment2.skey  payment2.vkey  payment3.addr  payment3.skey  payment3.vkey  payment4.addr  payment4.skey  payment4.vkey
(+10 files in other folders)
